force-app/main/default/objects/tc9_bgl__Acc_Inv__c/tc9_bgl__Acc_Inv__c.object-meta.xml
<CustomObject>
    <description>Accounting Invoice object which is the bridge between the Invoice object and all Accounting Invoice Item records</description>
    <label>Accounting Invoice</label>
    <nameField>
        <displayFormat>ACCINV-{0000000}</displayFormat>
        <label>Accounting Invoice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>