force-app/main/default/objects/tc9_bgl__Acc_Inv__c/fields/tc9_bgl__Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting System that this Invoice is Linked to</description>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Accounting System on the Accounting Invoice must be Active</errorMessage>
        <filterItems>
            <field>tc9_bgl__Acc_System_Setup__c.tc9_bgl__Active_Inactive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_System_Setup__c</referenceTo>
    <relationshipLabel>Accounting Invoice</relationshipLabel>
    <relationshipName>Accounting_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>