force-app/main/default/objects/tc9_bgl__Acc_Inv__c/fields/tc9_bgl__Date_Sent_To_GL__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Date_Sent_To_GL__c</fullName>
    <label>Date Sent To GL</label>
    <type>DateTime</type>
</CustomField>