force-app/main/default/objects/tc9_bgl__Acc_Inv__c/fields/tc9_bgl__External_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>