force-app/main/default/objects/tc9_bgl__Acc_Inv__c/fields/tc9_bgl__Source_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Source_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the source Invoice Record that was created in 2cloudnine Payroll</description>
    <label>Source Invoice</label>
    <referenceTo>tc9_et__Invoice__c</referenceTo>
    <relationshipLabel>Accounting Invoice</relationshipLabel>
    <relationshipName>Accounting_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>