force-app/main/default/objects/tc9_bgl__Acc_Inv__c/listViews/tc9_bgl__All.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_bgl__Accounting_System__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>tc9_bgl__Source_Invoice__c</columns>
    <columns>tc9_bgl__Sent_To_GL_Status__c</columns>
    <columns>tc9_bgl__Date_Sent_To_GL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>